--- a/app/package.json
+++ b/app/package.json
@@ -5,18 +5,20 @@
   "main": "./dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon ./dist/index.js",
+    "dev": "tsc && nodemon ./dist/index.js",
     "build": "tsc",
     "start": "node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@types/express": "^4.17.21",
     "express": "^4.18.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prisma": "^5.10.2"
   }
 }
