--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "tsc && nodemon ./dist/index.js",
-    "build": "tsc",
+    "dev": "tsc -b && nodemon ./dist/index.js",
+    "build": "tsc -b",
     "start": "node ./dist/index.js"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "typescript": "^5.4.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
