--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "tsc -b && nodemon ./dist/index.js",
     "build": "tsc -b",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "prisma":"prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
